2015-07-08  c.hetherington  <cth@carlh.net>

	* Remove the (I suspect) rarely used and very limited
	'properties' dialogue.

	* Stop V2 recognising V1 servers and vice versa (#510).

2015-07-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.19 released.

2015-07-06  c.hetherington  <cth@carlh.net>

	* Copy pl_PL translation from 1.x.

2015-07-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.18 released.

2015-07-06  c.hetherington  <cth@carlh.net>

	* Fix incorrectly formatted KDM emails (#630).

2015-07-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.17 released.

2015-07-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.16 released.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.15 released.

2015-07-02  c.hetherington  <cth@carlh.net>

	* Support <font color="#abcdef"> tags in SubRip files.

	* Fix failure to burn subs over existing DCP sources.

	* Remove output gamma configuration option.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.14 released.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.13 released.

2015-07-02  Carl Hetherington  <cth@carlh.net>

	* Restore audio analysis button for individual
	sources (#607 and #622).

2015-06-30  c.hetherington  <cth@carlh.net>

	* Write FFmpeg messages of AV_LOG_WARNING and
	below to the project's log file.

2015-06-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.12 released.

2015-06-25  c.hetherington  <cth@carlh.net>

	* Disallow impossible burn settings by manipulating
	the controls in the subtitle panel (#625).

2015-06-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.11 released.

2015-06-26  Carl Hetherington  <cth@carlh.net>

	* Fix missing subtitles in some cases.

	* Fix no-rebuild of DCP after subtitle burn is turned off/on.

2015-06-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.10 released.

2015-06-25  c.hetherington  <cth@carlh.net>

	* Add decode debugging option.
