@@ -1,3 +1,7 @@
+2015-07-09  c.hetherington  <cth@carlh.net>
+
+	* Stop Ctrl+A working when the content tab is not visible (#577).
+
 2015-07-08  c.hetherington  <cth@carlh.net>
 
 	* Remove the (I suspect) rarely used and very limited
